--- a/src/style/font.css
+++ b/src/style/font.css
@@ -37,6 +37,10 @@ button{
   font-size: 2rem;
 }
 
+.card__point h3{
+  font-size: 2rem;
+}
+
 @media (max-width: 540px) {
   h3{
     font-size: 1.5rem;
